repair on meve method --> ok